--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,254 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@0;1&family=Source+Sans+Pro:wght@600;900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-color: lightgray;
+  background: url('https://images.unsplash.com/photo-1520466809213-7b9a56adcd45?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80')
+    no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+}
+
+main {
+  background: linear-gradient(white, transparent);
+  backdrop-filter: blur(3px);
+  padding-top: 1rem;
+  height: calc(100vh - 3.3rem);
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: black;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Source Sans Pro', sans-serif;
+  padding: 0.5rem 1rem;
+  width: fit-content;
+  background-color: white;
+  margin: 0 auto;
+}
+
+h4 {
+  font-weight: 100;
+  color: lightgray;
+}
+
+p {
+  font-family: 'PT Serif', serif;
+}
+
+/*............. Buttons ..............*/
+
+.btn-primary {
+  font-family: 'PT Serif', serif;
+  font-size: 0.8rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  /* margin: 1.5rem; */
+  background-color: black;
+  color: white;
+}
+
+.btn-primary:hover {
+  transition: all 0.3s;
+  background-color: white;
+  color: black;
+}
+
+.btn-primary:active {
+  transform: translate(0px, 3px);
+}
+
+.btn-second {
+  font-family: 'PT Serif', serif;
+  font-size: 0.8rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  background-color: white;
+  color: black;
+}
+
+.btn-second:hover {
+  transition: all 0.3s;
+  background-color: black;
+  color: white;
+}
+
+.btn-second:active {
+  transform: translate(0px, 3px);
+}
+
+/*............. Login page ............*/
+
+.form-container {
+  background-color: white;
+  padding: 1rem;
+  margin: 0 auto;
+  border-radius: 5px;
+  max-width: 400px;
+  box-shadow: 0 0 3px rgb(0, 0, 0, 0.5);
+}
+
+.form-container p {
+  font-size: 0.8rem;
+  margin: 1rem;
+}
+
+form input {
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+}
+
+/*............ Register ...........*/
+#spoiler-label {
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 1rem;
+  font-family: 'PT Serif', serif;
+  font-size: 0.8rem;
+}
+
+#spoiler-label:hover {
+  background-color: black;
+  color: white;
+  transition: all 0.3s;
+}
+
+#spoiler {
+  display: none;
+}
+
+.register-form {
+  display: block;
+}
+
+:checked + .register-form {
+  display: block;
+}
+
+.divider {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.register .divider::before,
+.register .divider::after {
+  content: '';
+  display: inline-block;
+  width: 15px;
+  height: 2px;
+  border-top: 1px solid lightgray;
+  margin: 0 1rem;
+}
+
+/*........ Account ........*/
+h2 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#add-spoiler-label {
+  font-family: 'Source Sans Pro', sans-serif;
+  display: block;
+  background-color: orange;
+  width: calc(80vw + 2rem);
+  font-weight: 900;
+  border-radius: 5px;
+  padding: 1rem;
+  margin: 1rem auto;
+  box-shadow: 0 0 3px rgb(0, 0, 0, 0.5);
+  max-width: 1200px;
+}
+
+#add-spoiler-label:hover {
+  filter: brightness(110%);
+  color: white;
+}
+
+#add-spoiler {
+  display: none;
+}
+
+#title {
+  display: block;
+  padding: 0.5rem;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  margin: 1rem 0;
+}
+
+#newpost {
+  display: none;
+}
+
+#newpost .post-content {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  min-height: 200px;
+}
+
+:checked + #newpost {
+  display: block;
+}
+
+.post {
+  padding: 1rem;
+  background-color: white;
+  border-radius: 5px;
+  width: calc(80vw + 2rem);
+  max-width: 1200px;
+  margin: 1rem auto;
+  box-shadow: 0 0 3px rgb(0, 0, 0, 0.5);
+}
+
+.post-content {
+  width: 100%;
+  max-width: 1200px;
+  height: fit-content;
+  padding: 1rem;
+  border: none;
+}
+
+input[type='file']::file-selector-button {
+  font-family: 'PT Serif', serif;
+  font-size: 0.8rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  background-color: white;
+  color: black;
+}
+
+input[type='file']::file-selector-button:hover {
+  transition: all 0.3s;
+  background-color: black;
+  color: white;
 }
