--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -143,7 +143,7 @@ form input {
 }
 
 #spoiler {
-  display: none;
+  /* display: none; */
 }
 
 .register-form {
@@ -193,7 +193,7 @@ h2 {
 }
 
 #add-spoiler {
-  display: none;
+  /* display: none; */
 }
 
 #title {
@@ -205,7 +205,7 @@ h2 {
 }
 
 #newpost {
-  display: none;
+  /* display: none; */
 }
 
 #newpost .post-content {
