--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@0;1&family=Source+Sans+Pro:wght@600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   margin: 0;
@@ -11,19 +11,26 @@ body {
     no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  font-family: 'Roboto', sans-serif;
   width: 100%;
 }
 
-main {
+.btn {
+  margin-right: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+/* main {
   background: linear-gradient(white, transparent);
   backdrop-filter: blur(3px);
   padding-top: 1rem;
   height: calc(100vh - 3.3rem);
   max-width: 1200px;
   margin: 0 auto;
-}
+} */
 
-nav {
+/* nav {
   background-color: black;
   font-family: 'Source Sans Pro', sans-serif;
   padding: 1rem;
@@ -31,8 +38,8 @@ nav {
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
-}
-
+} */
+/* 
 nav a {
   text-decoration: none;
   color: white;
@@ -60,13 +67,12 @@ p {
 
 /*............. Buttons ..............*/
 
-.btn-primary {
+/* .btn-primary {
   font-family: 'PT Serif', serif;
   font-size: 0.8rem;
   border: 1px solid black;
   border-radius: 5px;
   padding: 0.5rem 1rem;
-  /* margin: 1.5rem; */
   background-color: black;
   color: white;
 }
@@ -99,12 +105,12 @@ p {
 }
 
 .btn-second:active {
-  transform: translate(0px, 3px);
-}
+  transform: translate(0px, 3px); */
+/* } */
 
 /*............. Login page ............*/
 
-.form-container {
+/* .form-container {
   background-color: white;
   padding: 1rem;
   margin: 0 auto;
@@ -126,7 +132,7 @@ form input {
 }
 
 /*............ Register ...........*/
-#spoiler-label {
+/* #spoiler-label {
   display: inline-block;
   border: 1px solid black;
   border-radius: 5px;
@@ -144,9 +150,9 @@ form input {
 
 #spoiler {
   /* display: none; */
-}
+/* } */
 
-.register-form {
+/* .register-form {
   display: block;
 }
 
@@ -166,11 +172,11 @@ form input {
   width: 15px;
   height: 2px;
   border-top: 1px solid lightgray;
-  margin: 0 1rem;
-}
+  margin: 0 1rem; */
+/* } */
 
 /*........ Account ........*/
-h2 {
+/* h2 {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -192,9 +198,9 @@ h2 {
   color: white;
 }
 
-#add-spoiler {
-  /* display: none; */
-}
+#add-spoiler { */
+/* display: none; */
+/* }
 
 #title {
   display: block;
@@ -204,9 +210,9 @@ h2 {
   margin: 1rem 0;
 }
 
-#newpost {
-  /* display: none; */
-}
+#newpost { */
+/* display: none; */
+/* }
 
 #newpost .post-content {
   border: 1px solid lightgray;
@@ -251,4 +257,4 @@ input[type='file']::file-selector-button:hover {
   transition: all 0.3s;
   background-color: black;
   color: white;
-}
+} */
