--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 
 * {
   margin: 0;
@@ -11,7 +11,7 @@ body {
     no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
   width: 100%;
 }
 
@@ -19,6 +19,15 @@ body {
   margin-right: 0.5rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.navbar-brand {
+  font-weight: 800;
+}
+
+h1,
+h2 {
+  font-weight: 800 !important;
 }
 
 /* main {
