--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
-
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +9,6 @@ body {
     no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  /* font-family: 'Roboto', sans-serif; */
   width: 100%;
 }
 
@@ -35,7 +32,8 @@ h2 {
   font-weight: 800 !important;
 }
 
-h4 {
+h4,
+.author {
   color: gray;
   font-size: 0.8rem !important;
   text-align: end;
@@ -43,4 +41,9 @@ h4 {
 
 .hidden {
   display: none !important;
+}
+
+.noSelection {
+  pointer-events: none;
+  resize: none;
 }
